--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@ Error message and password prompt
 
 <li>$:/state/Excise/-392760529/new-title</li>
 
+<li>$:/state/folded/English</li>
+
 <li>$:/state/folded/ברוכים הבאים</li>
 
 <li>$:/state/folded/המעבדה</li>
-
-<li>$:/state/folded/English</li>
 
 <li>$:/state/Link/--15630481/search</li>
 
@@ -230,6 +230,22 @@ Error message and password prompt
 <li>$:/UploadName</li>
 
 <li>$:/UploadURL</li>
+
+<li>bg</li>
+
+<li>English</li>
+
+<li>HH</li>
+
+<li>imagine</li>
+
+<li>less is more</li>
+
+<li>logo-bg</li>
+
+<li>MyStyles</li>
+
+<li>RTLStylesheet</li>
 
 <li>אבא יואל</li>
 
@@ -341,9 +357,9 @@ Error message and password prompt
 
 <li>האומנית</li>
 
-<li>האחיות כהן</li>
-
 <li>האחיות K</li>
+
+<li>האחיות כהן</li>
 
 <li>האסיפה הראשונה</li>
 
@@ -470,6 +486,8 @@ Error message and password prompt
 <li>ליל הדובונאז'</li>
 
 <li>לפתן חבושים</li>
+
+<li>לצייר גרפיטי וירטואלי במִיצְפֶּרֶש</li>
 
 <li>לקבל התראות על חידושים באתר</li>
 
@@ -676,22 +694,6 @@ Error message and password prompt
 <li>תרנגול הודו אפוי</li>
 
 <li>תשבץ למאומנים</li>
-
-<li>bg</li>
-
-<li>English</li>
-
-<li>HH</li>
-
-<li>imagine</li>
-
-<li>less is more</li>
-
-<li>logo-bg</li>
-
-<li>MyStyles</li>
-
-<li>RTLStylesheet</li>
 
 </ul>
 </p>
@@ -8462,13 +8464,13 @@ Error message and password prompt
 <div created="20161026202105658" modified="20161026202107028" title="$:/state/Excise/-392760529/new-title">
 <pre>הדירה</pre>
 </div>
+<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
+<pre>show</pre>
+</div>
 <div created="20161024121359650" modified="20161024121402274" title="$:/state/folded/ברוכים הבאים">
 <pre>show</pre>
 </div>
 <div created="20161219171744217" modified="20161219171751648" title="$:/state/folded/המעבדה">
-<pre>show</pre>
-</div>
-<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
 <pre>show</pre>
 </div>
 <div created="20161112214624841" modified="20161112214653371" title="$:/state/Link/--15630481/search">
@@ -8533,7 +8535,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170701171949802" title="$:/temp/search">
+<div created="20161023184814872" modified="20170701235645962" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8665,6 +8667,132 @@ Error message and password prompt
 </div>
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
+</div>
+<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
+<pre></pre>
+</div>
+<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
+<pre>This item is in English.
+
+You see it written left to right because it is tagged `LTR` (uppercase).
+
+@@.rtl
+גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
+@@</pre>
+</div>
+<div created="20161024200912852" modified="20170508145654960" tags="" title="HH">
+<pre>! Happy Hour
+
+!!![[גורה]]: 
+
+''שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי:
+''
+
+
+[img[pictures/hh.jpg]]
+
+שמונה פרקים המתארים את המתרחש בחיי עובדי, דיירי ועוברי האורח שבבניין. כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
+במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה).
+[[המצלמה]] היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
+היא מסתכלת בעין אוהבת על שלום, [[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
+ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
+אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת המצלמה כל טיפוס יכול להפוך [[לאחות|אחות כהן]] לרגעים או באופן קבוע.
+
+בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע, EA  שמו, שלובש גם הוא, דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
+מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
+המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
+למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
+בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
+אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
+
+
+&lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;</pre>
+</div>
+<div created="20170504194252766" modified="20170612200916674" title="imagine">
+<pre>[img[pictures/imagine.jpg]]
+
+!!![[האחיות כהן]]:
+
+[[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
+</div>
+<div created="20170624105324019" modified="20170629220706649" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
+<pre>[img[pictures/less-is-more.jpg]]
+
+!!![[ז'נבייב]]:
+
+לא פעם, אפשר לשמוע אנשים אומרים:
+
+הוספתי למרק, מלח, פלפל שחור, פלפל לבן, אגוז מוסקט, הל, כוסברה, זרעי חרדל, פטרוזיליה, שמיר, כמון, כורכום, פפריקה חריפה, יין... מה יכול להיות רע?
+
+well,
+
+יכול להיות די רע, האוכל שלכם - אם לא תשימו לב מה מתאים וכמה.
+
+השבוע התארחנו אצל אווה ופיליפ, והייתה שם עוגה, שאווה התביישה שאטעם, &quot;כי שמתי את כל מעט האגוזים שנשארו בקופסה במקום לשים חופן בלבד, וידעתי שזה לא נכון, ועשיתי את זה&quot;, היא התנצלה, וגם הכינה [[עוגיות|עוגיות חמאה ולימון]] [[ופאי|פאי נקטרין]].
+
+[[העוגה|טורט]] לכשעצמה עם הקנמון והמייפל עדיין היתה טעימה ומתוקה במידה, אך נכון, שעבודת לעיסה רבה הייתה כרוכה באכילתה, והאגוזים השתלטו עליה, ובכל זאת אכלתי ממנה עוד.
+
+מה שאני אומרת - אם אתם עומדים מול מה שזה לא יהיה וחוככים בדעתכם, ותוהים, אילו טעמים להוסיף פנימה, או כמות הסוכר או המלח - אז בלי להתבלבל שימו את הפחות - כי פחות זה יותר.
+
+
+</pre>
+</div>
+<div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
+<pre></pre>
+</div>
+<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
+<pre>.left { text-align: left }
+.center { text-align: center }
+.right { text-align: right }
+.ltr { direction: ltr }
+.rtl,
+.tc-edit-texteditor,
+.tc-tiddler-preview-preview { direction: rtl }</pre>
+</div>
+<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
+<pre>.tc-tiddler-title,
+.tc-tags-wrapper,
+.tc-tiddler-body,
+.tc-site-title,
+.tc-site-subtitle,
+.tc-timeline
+{
+    direction: rtl;
+}
+
+.tc-timeline
+{
+    text-align: left
+}
+
+.tc-site-title,
+.tc-site-subtitle
+{
+    padding-right: 8px
+}
+
+.tc-tiddler-frame .tc-tiddler-controls {
+    float: left;
+}
+
+/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
+
+.tc-tagged-LTR .tc-tiddler-title,
+.tc-tagged-LTR .tc-tags-wrapper,
+.tc-tagged-LTR .tc-tiddler-body,
+.tc-tiddler-system .tc-tiddler-title,
+.tc-tiddler-system .tc-tags-wrapper,
+.tc-tiddler-system .tc-tiddler-body
+{
+    direction: ltr;
+}
+
+.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
+.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
+
+{
+    float: right;
+}</pre>
 </div>
 <div created="20170608165812345" modified="20170609063510483" tags="[[משפחת באומן]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
@@ -9606,6 +9734,14 @@ Is where I want to be
 
 </pre>
 </div>
+<div created="20170320161241857" modified="20170507182303529" tags="HH" title="האחיות K">
+<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+
+!!![[גורה]]:
+
+K-SISTER [[לעולם תהיה|HH]] K-SISTER
+</pre>
+</div>
 <div created="20161111215423587" modified="20170620145913541" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
@@ -9632,14 +9768,6 @@ Is where I want to be
 
 
 
-</pre>
-</div>
-<div created="20170320161241857" modified="20170507182303529" tags="HH" title="האחיות K">
-<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
-
-!!![[גורה]]:
-
-K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20170504162635914" modified="20170527162543397" title="האסיפה הראשונה">
@@ -10915,6 +11043,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170702003010520" modified="20170702004243834" tags="[[הנה, כך]]" title="לצייר גרפיטי וירטואלי במִיצְפֶּרֶש">
+<pre>[img[pictures/anarchist-grafitti.jpg]]
+
+!!![[סטלין]]:
+
+אם תרצו לצייר גרפיטי על הקיר של [[מיצפרש]], תוכלו לעשות את זה [[כאן|https://cryptpad.fr/whiteboard/#/1/edit/w+KFEtUWmazyzYBR68Td5Q/+GYPGqAu9ea00RYoypZP-74J/]]. בלילות אנחנו שולחות לשם רובוט מחופש לילדה שמעדכן את הקיר לפי מה שציירתן באותו יום. זו התשובה הגלאמית לשירות פקס לכותל.</pre>
+</div>
 <div created="20170508170152174" modified="20170701135658152" tags="[[הנה, כך]]" title="לקבל התראות על חידושים באתר">
 <pre>[img[pictures/rko.jpg]]
 
@@ -11587,16 +11722,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170502201030702" modified="20170507181534699" tags="HH" title="מיצפרש">
+<div created="20170502201030702" modified="20170702001628119" tags="HH" title="מיצפרש">
 <pre>[img[pictures/mizperesh.jpg]]
 
 !!![[יויו]]:
 
-מיצפרש, שייך למשה הולמס, שהגיע [[למצפה|מצפה ראשית]], לאחר שיצא  לגמלאות משרות המדינה, והוא בן 48.
+מִיצְפְרֶש שייך למשה הולמס, שהגיע ל[[מִיצְפֶּרֶש|מצפה ראשית]] לאחר שיצא  לגמלאות משרות המדינה, והוא בן 48.
 
-הוא התחיל מבוטקה על דונם שקנה באזור שפך האסדה, ותוך שנה זה הפך למפעל קטן ומצליח.
+הוא התחיל מבוטקה על דונם שקנה באזור שפך האסדה, ותוך שנה הפך את השטח למפעל קטן ומצליח.
 
-</pre>
+הקיר הצפוני של המפעל הוא מקום בו הנוער נוהג לצייר [[גרפיטי|לצייר גרפיטי וירטואלי במִיצְפֶּרֶש]]. משה מוכר פוטאג' של מצלמות האבטחה שם לסטארטאפים של [[זיהוי ביומטרי|https://no2bio.org]]. יש לו חוש טבעי לתאורת אינפרא אדום דרמטית. רבים בתעשיה הבטחונית רואים במשה אמן וידאו אלטרנטיבי.</pre>
 </div>
 <div created="20170614165341450" modified="20170623150301814" tags="[[אחיות חוץ]]" title="מישל גונדרי">
 <pre>[img[pictures/michel-gondry.jpg]]
@@ -11715,12 +11850,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].</pre>
 </div>
-<div created="20170501184958435" modified="20170507181522921" tags="HH" title="מצפה ראשית">
+<div created="20170501184958435" modified="20170702000115896" tags="HH" title="מצפה ראשית">
 <pre>[img[pictures/mizpe-reshit.jpg]]
 
 !!![[גורה]]:
 
-מצפה ראשית, או בקיצור, [[מיצפרש]], הוא הישוב, [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
+מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
 <div created="20170223175057546" modified="20170616144350803" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
@@ -13570,132 +13705,6 @@ Fapina''
 |''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''A''|''&amp;#9608;''|''נ''|
 |''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''N''|''O''|''S''|
 </pre>
-</div>
-<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
-<pre></pre>
-</div>
-<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
-<pre>This item is in English.
-
-You see it written left to right because it is tagged `LTR` (uppercase).
-
-@@.rtl
-גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
-@@</pre>
-</div>
-<div created="20161024200912852" modified="20170508145654960" tags="" title="HH">
-<pre>! Happy Hour
-
-!!![[גורה]]: 
-
-''שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי:
-''
-
-
-[img[pictures/hh.jpg]]
-
-שמונה פרקים המתארים את המתרחש בחיי עובדי, דיירי ועוברי האורח שבבניין. כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
-במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה).
-[[המצלמה]] היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
-היא מסתכלת בעין אוהבת על שלום, [[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
-ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
-אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת המצלמה כל טיפוס יכול להפוך [[לאחות|אחות כהן]] לרגעים או באופן קבוע.
-
-בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע, EA  שמו, שלובש גם הוא, דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
-מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
-המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
-למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
-בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
-אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
-
-
-&lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;</pre>
-</div>
-<div created="20170504194252766" modified="20170612200916674" title="imagine">
-<pre>[img[pictures/imagine.jpg]]
-
-!!![[האחיות כהן]]:
-
-[[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
-</div>
-<div created="20170624105324019" modified="20170629220706649" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
-<pre>[img[pictures/less-is-more.jpg]]
-
-!!![[ז'נבייב]]:
-
-לא פעם, אפשר לשמוע אנשים אומרים:
-
-הוספתי למרק, מלח, פלפל שחור, פלפל לבן, אגוז מוסקט, הל, כוסברה, זרעי חרדל, פטרוזיליה, שמיר, כמון, כורכום, פפריקה חריפה, יין... מה יכול להיות רע?
-
-well,
-
-יכול להיות די רע, האוכל שלכם - אם לא תשימו לב מה מתאים וכמה.
-
-השבוע התארחנו אצל אווה ופיליפ, והייתה שם עוגה, שאווה התביישה שאטעם, &quot;כי שמתי את כל מעט האגוזים שנשארו בקופסה במקום לשים חופן בלבד, וידעתי שזה לא נכון, ועשיתי את זה&quot;, היא התנצלה, וגם הכינה [[עוגיות|עוגיות חמאה ולימון]] [[ופאי|פאי נקטרין]].
-
-[[העוגה|טורט]] לכשעצמה עם הקנמון והמייפל עדיין היתה טעימה ומתוקה במידה, אך נכון, שעבודת לעיסה רבה הייתה כרוכה באכילתה, והאגוזים השתלטו עליה, ובכל זאת אכלתי ממנה עוד.
-
-מה שאני אומרת - אם אתם עומדים מול מה שזה לא יהיה וחוככים בדעתכם, ותוהים, אילו טעמים להוסיף פנימה, או כמות הסוכר או המלח - אז בלי להתבלבל שימו את הפחות - כי פחות זה יותר.
-
-
-</pre>
-</div>
-<div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
-<pre></pre>
-</div>
-<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
-<pre>.left { text-align: left }
-.center { text-align: center }
-.right { text-align: right }
-.ltr { direction: ltr }
-.rtl,
-.tc-edit-texteditor,
-.tc-tiddler-preview-preview { direction: rtl }</pre>
-</div>
-<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
-<pre>.tc-tiddler-title,
-.tc-tags-wrapper,
-.tc-tiddler-body,
-.tc-site-title,
-.tc-site-subtitle,
-.tc-timeline
-{
-    direction: rtl;
-}
-
-.tc-timeline
-{
-    text-align: left
-}
-
-.tc-site-title,
-.tc-site-subtitle
-{
-    padding-right: 8px
-}
-
-.tc-tiddler-frame .tc-tiddler-controls {
-    float: left;
-}
-
-/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
-
-.tc-tagged-LTR .tc-tiddler-title,
-.tc-tagged-LTR .tc-tags-wrapper,
-.tc-tagged-LTR .tc-tiddler-body,
-.tc-tiddler-system .tc-tiddler-title,
-.tc-tiddler-system .tc-tags-wrapper,
-.tc-tiddler-system .tc-tiddler-body
-{
-    direction: ltr;
-}
-
-.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
-.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
-
-{
-    float: right;
-}</pre>
 </div>
 
 </div>
