--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@ Error message and password prompt
 
 <li>הסיפור על גורה, שסופר לאווה, על ידי יויו</li>
 
+<li>הספלים מהם אנו שותים</li>
+
 <li>הספנית</li>
 
 <li>הספרית</li>
@@ -8523,7 +8525,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הסדנה של קואנג]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הספלים מהם אנו שותים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9144,12 +9146,12 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170618162529875" modified="20170625163038313" tags="[[המטבח על פי ז'נבייב]]" title="בבוקר">
+<div created="20170618162529875" modified="20170706174527753" tags="[[המטבח על פי ז'נבייב]]" title="בבוקר">
 <pre>[img[pictures/genevieve-aruchat-boker.jpg]]
 
 !!![[ז'נבייב]]:
 
-אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה קפה, אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
+אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
 <div created="20170425194155286" modified="20170620150037849" title="בחוות החיות">
@@ -10285,6 +10287,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 אבא הסתכל עליי כלא מאמין למשמע אוזניו.                                                                                             'כל כך שימחת אותי עכשיו', הוא אמר.                                                                                      'אבל אתה לא עומד לזכות באור מן ההפקר, והוא גם לא יבוא לך בירושה מבנך, אבא. עכשיו אתה תצטרך לחצוב הרבה בסלע, נוסף על טיפול פסיכולוגי תצטרך להיות פתוח לכל שוני בי או בשאר בני משפחתך, ואני מקווה שאתה מבין מה אני אומר', הוספתי.                                                                                                                         'אני מבין מותק שלי. מבין. האמן לי. אלמלא תרצה לא הייתי מבין כלום, היא מדברת בדיוק כמוך, אלא שלה יש סבלנות אליי'.                                                                                                       'אתה משתפר, אבא. ג'וזף וז'נבייב יגיעו בעוד כמה ימים וחסר לך שלא תהיה נחמד אליהם'.                                                                                             'מבטיח'. 
 &quot;את מבינה אווה, אבא נתן לי את הבטחתו, ועכשיו הוא יראה מי מאלף את מי בבית הזה&quot;.
 </pre>
+</div>
+<div created="20170705183317472" modified="20170706203742682" tags="[[המטבח על פי ז'נבייב]]" title="הספלים מהם אנו שותים">
+<pre>[img[pictures/sifley-cafe.jpg]]
+
+!!![[ז'נבייב]]:
+
+בזמן האחרון נשברו לי רוב ספלי הקפה היפים שהיו לי מהפורצלן, אז קניתי כמה חדשים ואני עדיין מנסה.
+
+הספלים מהם אנו שותים הם כמו תחפושת: 
+
+לפעמים אני מורה ליוגה, לפעמים איכרה סיבירית שקיבלה סרוויס כחלק מנדוניה, ולפעמים אני גבר ספרדי עם שפם.</pre>
 </div>
 <div created="20170318200354245" modified="20170507181909075" tags="HH" title="הספנית">
 <pre>[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
@@ -13719,7 +13732,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
-<div created="20170624105324019" modified="20170629220706649" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
+<div created="20170624105324019" modified="20170706174455610" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[ז'נבייב]]:
