--- a/index.html
+++ b/index.html
@@ -669,6 +669,8 @@ Error message and password prompt
 
 <li>שלח</li>
 
+<li>שמרים קרנץ</li>
+
 <li>שניצל</li>
 
 <li>שעועית ירוקה בחמאה ושום</li>
@@ -8525,7 +8527,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הספלים מהם אנו שותים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הסדנה של קואנג]] [[ארוחת כריסמס]] יה [[הספלים מהם אנו שותים]] [[עם הפנים החוצה]] צ'נג [[שמרים קרנץ]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9096,7 +9098,7 @@ Error message and password prompt
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20161112191527440" modified="20170523152620806" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20170709130529047" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -9115,7 +9117,7 @@ Error message and password prompt
 
 החל משלב מסויים בחיי (נכון יותר לומר - מאז שקראתי את [[עד שאמצא אותך|https://en.wikipedia.org/wiki/Until_I_Find_You]] של [[ג'ון אירווינג]], התחלתי לראות את הדברים דרך המשפט:
 
-''התבונה הגיע לקצה יכולתה ורק האמונה נותרה בעינה.''
+''התבונה הגיעה לקצה יכולתה ורק האמונה נותרה בעינה.''
 
 וארוחת הכריסמס 2015 היא הנותנת.
 
@@ -13466,6 +13468,72 @@ Fapina''
 <pre>[img[pictures/CT2ku66Mqk7cBavl.JPG]]
 ''
 הכל ייתברר''</pre>
+</div>
+<div created="20170707184028118" modified="20170709122802610" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]]" title="שמרים קרנץ">
+<pre>[img[pictures/shmarim-krantz.jpg]]
+
+!!![[ז'נבייב]]:
+
+אני לא אדם של מתוקים, אבל נפלו עלי השתיים האלה הנפלאות [[סוניה]] [[ואווה|אווה]], וכשמדובר בהן - אני מחכה למתוקים. בשבת האחרונה סוניה הזמינה רק את הזקנים, כלומר את [[ג'וזף|ג'וזף אברואה]] ואותי ואת אווה [[ופיליפ|פיליפ]]. היא הכינה ארוחה הונגרית הורגת מ א' ועד ת'.
+
+אחרי שכבר אכלנו ושתינו והתפוצצנו, היא הכינה לנו קפה עם השמרים קרנץ הזו:
+
+
+שמרים קרנץ
+
+החומרים :
+
+1. לבצק :
+
+* 50 גרם שמרים יבשים או שמרית
+* 4 כוסות וחצי קמח לבן
+* 4 כפות סוכר
+* 2 ביצים
+* 200 גרם חמאה
+* כוס חלב
+
+2. למלית :
+
+* כוס סוכר
+* 4כפות קקאו
+* כף קינמון טחון
+* 200גרם חמאה
+
+3. לסירופ :
+
+* כוס ושליש סוכר
+* כוס מים
+*רום.מי ורדים.תמצית וניל
+
+
+אופן ההכנה :
+
+1. במערבל חשמלי עם וו לישה לשים את חומרי הבצק ,בתחילה את היבשים , אליהם מוסיפים כהדרגה את הנוזלים, וממשיכים את הלישה במהירות בינונית-נמוכה כעשר דקות.
+
+2. מקררים את הבצק 3-9 שעות במקרר.
+
+4. מחממים תנור לחום בינוני, מרפדים תבנית בנייר אפיה (תבנית התנור)
+
+5. מערבבים את חומרי המלית  למשחה חלקה. (ביד או במעבד מזון)
+
+6. מחלקים את הבצק לשניים או שלושה חלקים שווים.
+
+7. מרדדים כל עלה בנפרד,מורחים שכבה אחידה של משחת החמאה וההקקאוו.
+
+8. מקפלים את הבצק והמלית באופן הבא:
+
+ קצה ימני וקצה שמאלי לאמצע ,ואז את שני הקפלים מקפלים שוב זה על זה. חוזרים על הפעולה גם מלמעלה ולמטה. את הבצק המקופל מרדדים שוב,  לפס ברוחב 6–12סנטימטרים ובאורך של כ-24 סנטימטרים. חותכים לאורך שלושה פסים, מהם קולעים צמה , את הצמות מניחים בתבנית.
+
+9. אופים 40-50 דקות (עד שהעוגה אפויה היטב אך לא שרופה)
+
+10.  בזמן שהעוגה בתנור מכינים סירופ. מרתיחים את המים הסוכר  ותמצית הורדים וממשיכים את הבישול בלהבה בינונית חמש דקות נוספות.
+
+11. כשהעוגות מוכנות יוצקים עליהן את הסירופ.
+
+12. מחכים חצי שעה ומגישים.
+
+
+</pre>
 </div>
 <div created="20170622203416653" modified="20170623115651789" tags="[[חיות אוכל]]" title="שניצל">
 <pre>[img[pictures/schnitzel.jpg]]
