--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@ DAMAGE.
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
-<script type="text/javascript">
-  var _bftn_options = {theme: 'slow'};
-</script>
-<script src="https://widget.battleforthenet.com/widget.js" async></script>
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -353,6 +349,8 @@ Error message and password prompt
 
 <li>הברמנית</li>
 
+<li>הגשר</li>
+
 <li>הדוד האמיתי</li>
 
 <li>הדירה</li>
@@ -429,6 +427,8 @@ Error message and password prompt
 
 <li>חנות דיסקים</li>
 
+<li>חשיפה לצפון</li>
+
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
 
 <li>טורט</li>
@@ -466,6 +466,8 @@ Error message and password prompt
 <li>כשהיו מעט מכוניות</li>
 
 <li>כשהם ישנים</li>
+
+<li>כשהמכוניות היו יפות</li>
 
 <li>להתרועע עם האחות ב. כהן</li>
 
@@ -511,6 +513,8 @@ Error message and password prompt
 
 <li>ממשיכים לדמם</li>
 
+<li>מניחים ושומרים</li>
+
 <li>מנקים היטב</li>
 
 <li>מסוכנת</li>
@@ -546,6 +550,8 @@ Error message and password prompt
 <li>נדיה</li>
 
 <li>סבתא שלנו</li>
+
+<li>סדרות</li>
 
 <li>סוניה</li>
 
@@ -604,6 +610,8 @@ Error message and password prompt
 <li>פאי נקטרין</li>
 
 <li>פאי פקאן עם קרמל</li>
+
+<li>פארגו</li>
 
 <li>פבלובה</li>
 
@@ -8531,7 +8539,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הסדנה של קואנג]] [[ארוחת כריסמס]] יה [[הספלים מהם אנו שותים]] [[עם הפנים החוצה]] צ'נג [[שמרים קרנץ]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="אירי גורה הגשר [[איתן וג'ואל כהן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8551,7 +8559,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170704191830768" title="$:/temp/search">
+<div created="20161023184814872" modified="20170714141224094" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8881,7 +8889,7 @@ Error message and password prompt
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170606170942908" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20170714141452477" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -8890,7 +8898,7 @@ Error message and password prompt
 
 אתמול הלכתי איתה סתם לטייל בעיר, והיום אנחנו יושבים כל היום סתם בבית, ולועסים את עצמינו לדעת. אולי בגלל שפסחתי על שנות העשרים של חיי, נעים לי לחוות אותן עכשיו עם החבורה חסרת הגיל, אך מהבחינה שאנחנו כל הזמן יחד. [[תמיד יש מישהו בדירה|המשק האוטרקי שלנו]], וזה מאד עוזר כשאתה נפרד מחברה.
 
-אני מביט בה עכשיו. היא מכינה לנו טוסטים. ניסיתי לעזור לה [[אבל היא ביקשה לבד|אירי טוענת]]. היא נעה בשקט זקופה כמו נזיר בקאטת מטבח מערבית. צועדת לעבר המקרר וחוזרת למשטח העבודה. חותכת את הירקות בריכוז, ומניחה אותם על פרוסות הלחם הלבן מהן חתכה את הקשה. מציעה לי קוקטייל אננס טרי ורום. מכינה אותו בבלנדר עם קרח. אחרי שהקוקטייל מוכן היא מוציאה את הטוסטים מהתנור ומניחה אותם על הדלפק. אנחנו יושבים על הדלפק אוכלים ושותים. אני שואל אותה על [[האלכסנדר|שיטת אלכסנדר]] שלה והיא מספרת לי. אני מרגיש איך גופי מתארך ומתרחב כשהיא מדברת. אנחנו שותים ואוכלים והיא מדברת ונעה ברצינות גמורה ועם חיוך. היא מכינה עוד קוקטייל בבלנדר. הפעם היא מוסיפה לו מיץ לימון. תוך כדי שהיא מכינה את הקוקטייל ומנקה את הכלים והכיור, היא ממשיכה לספר לי איך היא חושבת אלכסנדר גם ברגע זה בו היא מדברת איתי. מניחה לצוואר להיות חופשי. [[&quot;כשהתנועות נעשות מתוך המחשבה של ההנחה לצוואר&quot;|קפיץ ספירלי]], היא אומרת לי, &quot;הן יוצאות נכון יותר מן הגוף&quot;.
+אני מביט בה עכשיו. היא מכינה לנו טוסטים. ניסיתי לעזור לה [[אבל היא ביקשה לבד|אירי טוענת]]. היא נעה בשקט זקופה, כמו נזיר בקאטת מטבח מערבית. צועדת לעבר המקרר וחוזרת למשטח העבודה. חותכת את הירקות בריכוז, ומניחה אותם על פרוסות הלחם הלבן מהן חתכה את הקשה. מציעה לי קוקטייל אננס טרי ורום. מכינה אותו בבלנדר עם קרח. אחרי שהקוקטייל מוכן היא מוציאה את הטוסטים מהתנור ומניחה אותם על הדלפק. אנחנו יושבים על הדלפק אוכלים ושותים. אני שואל אותה על [[האלכסנדר|שיטת אלכסנדר]] שלה והיא מספרת לי. אני מרגיש איך גופי מתארך ומתרחב כשהיא מדברת. אנחנו שותים ואוכלים והיא מדברת ונעה ברצינות גמורה ועם חיוך. היא מכינה עוד קוקטייל בבלנדר. הפעם היא מוסיפה לו מיץ לימון. תוך כדי שהיא מכינה את הקוקטייל ומנקה את הכלים והכיור, היא ממשיכה לספר לי איך היא חושבת אלכסנדר גם ברגע זה בו היא מדברת איתי. מניחה לצוואר להיות חופשי. [[&quot;כשהתנועות נעשות מתוך המחשבה של ההנחה לצוואר&quot;|קפיץ ספירלי]], היא אומרת לי, &quot;הן יוצאות נכון יותר מן הגוף&quot;.
 
 אני מבקש ממנה, והיא מתקשרת למורה שלה לאלכסנדר וקובעת לי שיעור ראשון.
 
@@ -8939,12 +8947,14 @@ Error message and password prompt
 
 איריס בתה של אווה, היא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
-<div created="20170415200315789" modified="20170605203758330" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
+<div created="20170415200315789" modified="20170714140957925" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
 
   [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו [[לאווה כהן|אווה]], אחותם - שהיא קונדיטורית הונגריה, היו [[ראשית האחיות|המעבדה]].
+
+אני לגמרי לא היחידי [[שמת עליהם|פארגו]] ועל הראש הנפלא שלהם.
 
 
 
@@ -9160,7 +9170,7 @@ Error message and password prompt
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170425194155286" modified="20170620150037849" title="בחוות החיות">
+<div created="20170425194155286" modified="20170711173923960" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9660,14 +9670,14 @@ Is where I want to be
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20170504162635914" modified="20170527162543397" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20170709132206893" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
 
 הפגישה הראשונה של כולנו, היתה [[בארוחת הכריסמס המונומנטלית|ארוחת כריסמס]], שהתחוללה בדצמבר 2015, ומאז בעצם אנחנו מתראים כל הזמן. הצעירים ממש עובדים יחד, ואני מגיע או מגיח לארוחות משפחתיות וכיו&quot;ב.
 
-לפני שבוע, (כלומר, למעלה משנה אחרי אותה ארוחה), זו הייתה הפעם הראשונה מאז, שיויו ביקש מכולנו לבוא, וממש כולם חוץ [[מדןדן|דןדן נסע]] שנסע, היו, כולל איריס, ביתה של אווה אהובתי.
+לפני שבוע, (כלומר, למעלה משנה אחרי אותה ארוחה), זו הייתה הפעם הראשונה מאז, שיויו ביקש מכולנו לבוא, וממש כולם חוץ [[מדןדן|דןדן נסע]] שנסע, היו, כולל [[איריס|איריס הבת]], ביתה של אווה אהובתי.
 
 יויו עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני יומיים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
 
@@ -9690,12 +9700,19 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 בעלת טנדר פורד ירוק וישן. (מכונה הקטנה)</pre>
 </div>
-<div created="20170505224151892" modified="20170611194758514" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
+<div created="20170713130412612" modified="20170713183856532" tags="סדרות" title="הגשר">
+<pre>[img[pictures/hagesher.jpg]]
+
+!!![[יויו]]:
+
+אל תגיד הגשר, תגיד סאגה נורן.</pre>
+</div>
+<div created="20170505224151892" modified="20170709132522514" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
 <pre>[img[pictures/hadod-haamiti.jpg]]
 
 !!![[יויו]]:
 
-כש[[הדוד|https://thedod.github.io#עברית]] הגיע אלינו, די מהר, הכל התחיל להסתדר במקום. 
+כש[[הדוד|https://thedod.github.io#עברית]], שכדאי מאד להקשיב למה שיש לו להגיד, הגיע אלינו, די מהר, הכל התחיל להסתדר במקום. 
 
 </pre>
 </div>
@@ -9974,7 +9991,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161112205825183" modified="20170702183230212" title="הסינים">
+<div created="20161112205825183" modified="20170709133253076" title="הסינים">
 <pre>[img[pictures/hasinim.jpg]]
 
 !!![[גורה]]:
@@ -9986,7 +10003,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הם (חמישתם), גדלו יחדיו ברובע ה-17, למדו יחדיו מהגן ועד סוף התיכון, חגגו יחדיו את כל החגים כולל את [[כריסמס האחרון|ארוחת כריסמס]].
 
-את מלאכות הבנייה למדו מאבותיהם, וכך הפכו הם,  לחבורת שיפוצניקים לעילא, שהגיעה אלינו דרך ז'נבייב, דרכה הגענו [[לדירה|הדירה]].
+את מלאכות הבנייה למדו מאבותיהם, וכך הפכו הם,  לחבורת שיפוצניקים לעילא, שהגיעה אלינו דרך [[ז'נבייב]], דרכה הגענו [[לדירה|הדירה]].
 
 [[קואנג]] היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת השיפוצים והרכישות לדירה, אך הם כולם אחד אחד.</pre>
 </div>
@@ -10573,6 +10590,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
 </div>
+<div created="20170711174005898" modified="20170711180214225" tags="סדרות" title="חשיפה לצפון">
+<pre>[img[pictures/northern-exposure.jpg]]
+
+!!![[יויו]]:
+
+[[its not the thing that fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]</pre>
+</div>
 <div created="20170407152300115" modified="20170412203424705" tags="[[מתכוני ארוחת הכריסמס]]" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
 
@@ -10583,7 +10607,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * קולים פרוסות לחם בתנור עד לגוון הרצוי.
 * מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.</pre>
 </div>
-<div created="20170624105143385" modified="20170626184453690" tags="[[חיות אוכל]] [[כשהם ישנים]]" title="טורט">
+<div created="20170624105143385" modified="20170709132743701" tags="[[חיות אוכל]] [[כשהם ישנים]]" title="טורט">
 <pre>[img[pictures/tort.jpg]]
 
 !!![[אווה]]:
@@ -10626,7 +10650,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170514194133105" modified="20170514223402769" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
+<div created="20170514194133105" modified="20170709165529754" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
 
 
@@ -10831,6 +10855,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;list-links filter:&quot;[tag[כשהם ישנים]]&quot;&gt;&gt;</pre>
+</div>
+<div created="20170713143734032" modified="20170713144014727" tags="פעם" title="כשהמכוניות היו יפות">
+<pre>[img[pictures/paam-keshe-hamechoniyot.jpg]]
+''
+לא השתמשו בחגורות בטיחות''
+</pre>
 </div>
 <div created="20170701135805872" modified="20170701184938487" tags="[[הנה, כך]]" title="להתרועע עם האחות ב. כהן">
 <pre>,,^^[img[pictures/sisterbotcoen-mordech.png]]
@@ -11708,6 +11738,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[נמשיך לדמם|https://www.youtube.com/watch?v=cYhDSo9pgxg]], תחתים ובטנים,
 ימשיכו לשעמם. </pre>
 </div>
+<div created="20170709165358073" modified="20170710123809649" tags="[[בחוות החיות]]" title="מניחים ושומרים">
+<pre>[img[pictures/nekiyey-capaim.jpg]]
+
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, החיות מפגינות אמונה.</pre>
+</div>
 <div created="20170114175718512" modified="20170424211535664" tags="[[המטבח על פי ז'נבייב]]" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
@@ -11850,14 +11885,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[משפחת באומן]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170704162525777" modified="20170704191751372" title="משפצים ובונים רהיטים">
+<div created="20170704162525777" modified="20170709182423628" title="משפצים ובונים רהיטים">
 <pre>[img[pictures/meshapzim-rahitim.jpg]] 
 
 !!![[יויו]]:
 
 בתקופה שעברנו [[לדירה|הדירה]], [[ואלפרד|אלפרד]] ניהל את השיפוץ, [[דןדן]] והוא התחילו לשפץ רהיטים, ולא רק, גם במשקופי עץ ובמדפים שהיו הם טיפלו יפה. 
 
-את הנטייה לאסוף  מהרחוב רהיטים שאנשים זרקו, או ארגזי עץ, ירשנו כולנו מגורה באותה תקופה. מפה לשם, [[קואנג]] הזמין את מי שרצה לעבוד [[בסטודיו שלו|הסדנה של קואנג]]. אלפרד מאד שמח, וככה קרה שהם משפצים ובונים יחדיו.
+את הנטייה לאסוף  מהרחוב רהיטים שאנשים זרקו, או ארגזי עץ, ירשנו כולנו מגורה באותה תקופה. מפה לשם, [[קואנג]] הזמין את מי שרצה, לעבוד [[בסטודיו שלו|הסדנה של קואנג]]. אלפרד מאד שמח, וככה קרה שהם משפצים ובונים יחדיו.
 
 </pre>
 </div>
@@ -11909,6 +11944,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[יויו]]:
 
 זו תמיד תישאר תעלומה, למרות שיש אפשרויות לתשובה, אבל זו בהחלט שאלה - איך מאדם שמח, טוב לב וסבלני כמו סבתא יצאה אישה כמו [[אימא שלנו|דינה ז&quot;ל]].
+
+</pre>
+</div>
+<div created="20170711173812724" modified="20170712082932518" tags="" title="סדרות">
+<pre>[img[pictures/sdarot.jpg]]
+
+!!![[יויו]]:
+
+מגיע רגע בו לנרט, השמאן האינדיאני האזורי ב&quot;חשיפה לצפון&quot;, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה חבל&quot;ז שוכ&quot;ו ק&quot;ר.
+
+
+&lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
+
 
 </pre>
 </div>
@@ -12699,6 +12747,15 @@ __אופן ההכנה____
 *להוציא את הבצק מן התנור ולסדר עליו את הפקאנים.
 *למזוג בעדינות מעל הפקאנים את הקרמל מבלי *לכסות אותם לגמרי. (את הקרמל שנשאר אפשר לשמור במקרר או במקפיא ולהשתמש בו לפאי נוסף.)
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
+</pre>
+</div>
+<div created="20170714125945456" modified="20170714141111287" tags="סדרות" title="פארגו">
+<pre>[img[pictures/fargo.jpg]]
+
+!!![[יויו]]:
+
+זה לא [[שזו|https://www.youtube.com/watch?v=KQb00kKRA08]] הסצנה הכי טובה בשלוש עונות מצויינות מכל בחינה של פארגו, ובעצם אי אפשר לבחור מה הכי, אבל אפשר להגיד שרצח בינות לעצים ורציחות בכלל, קורות שם.
+
 </pre>
 </div>
 <div created="20170414153603797" modified="20170528150947168" tags="[[מתכוני ארוחת הכריסמס]]" title="פבלובה">
